--- a/docs/style.css
+++ b/docs/style.css
@@ -16,9 +16,10 @@ html, body {
 #center {
 	position: absolute;
     left: 50%;
-    top: 33%;
+    top: 35%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+	width: 98%;
 }
 
 
